data/derived/fa15/progs/unify/prog1296.ml.out
Characters 107-149:
  | Sine e -> Printf.printf "sin(pi*%s)", exprToString e
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type unit
